# cv-remove-bg

./: .flake8  .gitignore  DEVCONTAINER_SETUP.md  README.md  background_removal.ipynb  background_removal.py  dev_helpers.sh  pyproject.toml  requirements.txt  setup.py  start_jupyter.sh  test-devcontainer.py  test_setup.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  postCreateCommand.sh
