[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-remove-bg"
version = "1.0.0"
description = "A powerful tool for automatically removing backgrounds from images using OpenCV"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CV Background Removal Tool"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.8"
dependencies = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.21.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "pre-commit>=2.15.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "notebook>=6.0.0",
    "ipywidgets>=7.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
]

[project.scripts]
cv-remove-bg = "background_removal:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "images*", "output*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["background_removal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 88
extend-exclude = [
    "venv",
    ".venv",
    "site-packages",
    "lib/python*",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    "_build",
    "buck-out",
    "build",
    "dist",
    "images",
    "output"
]
ignore = [
    "E203",
    "W503",
]

